--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'ヒラギノ角ゴシック', sans-serif;
-            background: url('path/to/earth-image.jpg') no-repeat center center fixed;
+            background: url('path/to/earth-image1.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             overflow-x: hidden;
@@ -51,7 +51,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">GALAXY</a>
+        <a class="navbar-brand" href="#">GALAXY.COM</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
