--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <style>
         body {
             font-family: 'ヒラギノ角ゴシック', sans-serif;
-            background: url('path/to/earth-image1.jpg') no-repeat center center fixed;
+            background: url('path/to/earth-image2.jpg') no-repeat center center fixed;
             background-size: cover;
             color: #fff;
             overflow-x: hidden;
@@ -125,10 +125,10 @@
     </section>
 
     <div class="fixed-social">
-        <a href="https://www.instagram.com/gin_19n0" target="_blank"><img src="path/to/instagram-icon.png" alt="Instagram"></a>
-        <a href="https://lin.ee/SMvzUSQ" target="_blank"><img src="path/to/line-icon.png" alt="LINE"></a>
-        <a href="https://www.tiktok.com/@gi_wellness" target="_blank"><img src="path/to/tiktok-icon.png" alt="TikTok"></a>
-        <a href="https://www.facebook.com/gingai9no" target="_blank"><img src="path/to/facebook-icon.png" alt="Facebook"></a>
+        <a href="https://www.instagram.com/gin_19n0" target="_blank"><img src="path/to/instagram-icon.jpg" alt="Instagram"></a>
+        <a href="https://lin.ee/SMvzUSQ" target="_blank"><img src="path/to/line-icon.jpg" alt="LINE"></a>
+        <a href="https://www.tiktok.com/@gi_wellness" target="_blank"><img src="path/to/tiktok-icon.jpg" alt="TikTok"></a>
+        <a href="https://www.facebook.com/gingai9no" target="_blank"><img src="path/to/facebook-icon.jpg" alt="Facebook"></a>
     </div>
 
     <footer class="text-center mt-5">
