--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Official Website</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-<link rel="stylesheet" href="style.css?v=1.0">
-
     <style>
         body {
             font-family: 'ヒラギノ角ゴシック', sans-serif;
@@ -53,7 +51,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#">GALAXY.COM</a>
+        <a class="navbar-brand" href="#">GALAXY</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
@@ -76,14 +74,14 @@
         <div id="projectCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="path/to/project1.jpg" alt="Project 1">
+                    <img src="images/project1.jpg" alt="Project 1">
                     <div class="carousel-caption">
                         <h5>Project 1</h5>
                         <p><a href="https://github.com/ginginga/project1" class="btn btn-light">View Project</a></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="path/to/project2.jpg" alt="Project 2">
+                    <img src="images/project2.jpg" alt="Project 2">
                     <div class="carousel-caption">
                         <h5>Project 2</h5>
                         <p><a href="https://github.com/ginginga/project2" class="btn btn-light">View Project</a></p>
@@ -127,10 +125,10 @@
     </section>
 
     <div class="fixed-social">
-        <a href="https://www.instagram.com/gin_19n0" target="_blank"><img src="path/to/instagram-icon.jpg" alt="Instagram"></a>
-        <a href="https://lin.ee/SMvzUSQ" target="_blank"><img src="path/to/line-icon.jpg" alt="LINE"></a>
-        <a href="https://www.tiktok.com/@gi_wellness" target="_blank"><img src="path/to/tiktok-icon.jpg" alt="TikTok"></a>
-        <a href="https://www.facebook.com/gingai9no" target="_blank"><img src="path/to/facebook-icon.jpg" alt="Facebook"></a>
+        <a href="https://www.instagram.com/gin_19n0" target="_blank"><img src="images/instagram-icon.png" alt="Instagram"></a>
+        <a href="https://lin.ee/SMvzUSQ" target="_blank"><img src="images/line-icon.png" alt="LINE"></a>
+        <a href="https://www.tiktok.com/@gi_wellness" target="_blank"><img src="images/tiktok-icon.png" alt="TikTok"></a>
+        <a href="https://www.facebook.com/gingai9no" target="_blank"><img src="images/facebook-icon.png" alt="Facebook"></a>
     </div>
 
     <footer class="text-center mt-5">
