--- a/index.html
+++ b/index.html
@@ -6,6 +6,22 @@
     <title>My Official Website</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
+        @font-face {
+            font-family: 'Halfomania';
+            src: url('fonts/Halfomania.ttf') format('truetype');
+            font-weight: normal;
+            font-style: normal;
+        }
+
+        @keyframes typing {
+            from { width: 0; }
+            to { width: 100%; }
+        }
+
+        @keyframes blink {
+            50% { border-color: transparent; }
+        }
+
         body {
             font-family: 'ヒラギノ角ゴシック', sans-serif;
             background: url('path/to/earth-image2.jpg') no-repeat center center fixed;
@@ -13,9 +29,19 @@
             color: #fff;
             overflow-x: hidden;
         }
-        h1, h2 {
-            font-family: 'Melete', serif;
+
+        .hero-text h1 {
+            font-family: 'Halfomania', sans-serif; /* フォントを変更 */
+            overflow: hidden; /* Ensures the content is not revealed until the animation */
+            border-right: .15em solid #fff; /* The typewriter cursor */
+            white-space: nowrap; /* Keeps the content on a single line */
+            margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+            letter-spacing: .15em; /* Adjust as needed */
+            animation: 
+                typing 3.5s steps(40, end),
+                blink .75s step-end infinite;
         }
+
         .hero {
             position: relative;
             height: 100vh;
@@ -25,27 +51,9 @@
             overflow: hidden;
             background: none; /* heroセクションの背景をクリアにする */
         }
+
         .hero-text {
             text-align: center;
-        }
-        .carousel-item img {
-            width: 100%;
-            height: auto;
-        }
-        .fixed-social {
-            position: fixed;
-            bottom: 10px;
-            right: 10px;
-            display: flex;
-            flex-direction: column;
-        }
-        .fixed-social a {
-            margin: 5px 0;
-            color: #fff;
-        }
-        .fixed-social img {
-            width: 30px;
-            height: 30px;
         }
     </style>
 </head>
@@ -74,14 +82,14 @@
         <div id="projectCarousel" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="images/project1.jpg" alt="Project 1">
+                    <img src="path/to/project1.jpg" alt="Project 1">
                     <div class="carousel-caption">
                         <h5>Project 1</h5>
                         <p><a href="https://github.com/ginginga/project1" class="btn btn-light">View Project</a></p>
                     </div>
                 </div>
                 <div class="carousel-item">
-                    <img src="images/project2.jpg" alt="Project 2">
+                    <img src="path/to/project2.jpg" alt="Project 2">
                     <div class="carousel-caption">
                         <h5>Project 2</h5>
                         <p><a href="https://github.com/ginginga/project2" class="btn btn-light">View Project</a></p>
