--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
         .hero-text h1 {
             font-family: 'Halfomania', sans-serif; /* フォントを変更 */
+            font-size: 48px; /* フォントサイズを変更 */
             overflow: hidden; /* Ensures the content is not revealed until the animation */
             border-right: .15em solid #fff; /* The typewriter cursor */
             white-space: nowrap; /* Keeps the content on a single line */
@@ -54,6 +55,26 @@
 
         .hero-text {
             text-align: center;
+        }
+
+        .fixed-social {
+            position: fixed;
+            top: 50%;
+            right: 10px;
+            transform: translateY(-50%);
+            display: flex;
+            flex-direction: column;
+            align-items: center; /* 中央寄せ */
+        }
+
+        .fixed-social a {
+            margin: 5px 0;
+            color: #fff;
+        }
+
+        .fixed-social img {
+            width: 30px;
+            height: 30px;
         }
     </style>
 </head>
