Updated index.html to use Melete font

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         @font-face {
-    font-family: 'Halfomania';
-    src: url('fonts/Halfomania.ttf') format('truetype');
+    font-family: 'Melete';
+    src: url('fonts/Melete.ttf') format('opentype');
     font-weight: normal;
     font-style: normal;
 }
