--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ body {
 }
 
 .hero-text h1 {
-    font-family: 'Halfomania', sans-serif; /* フォントを変更 */
+    font-family: 'Melete'', sans-serif; /* フォントを変更 */
     font-size: 48px; /* フォントサイズを変更 */
     overflow: hidden; /* Ensures the content is not revealed until the animation */
     border-right: .15em solid #fff; /* The typewriter cursor */
